--- a/src/index.html
+++ b/src/index.html
@@ -270,9 +270,24 @@
         />
         <h2>Pizza</h2>
       </div>
-
-      <button class="card-menu-large">menu</button>
+      <div class="container-fluid menu-button">
+        <button class="card-menu-large">menu</button>
+      </div>
     </div>
+
+    <!-- comments -->
+
+    <div class="container-fluid comment-section">
+      <div class="comment-wrapper">
+        <img src="./images/5 social comments/Ellipse 11.png" alt="" />
+        <img src="./images/5 social comments/Vector-1.png" alt="" />
+        <p>This is the best place ever</p>
+
+        <h6>google</h6>
+        <h2>Janice <span>Damon</span></h2>
+      </div>
+    </div>
+
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
