nearly done mobile v

--- a/src/index.html
+++ b/src/index.html
@@ -279,12 +279,171 @@
 
     <div class="container-fluid comment-section">
       <div class="comment-wrapper">
-        <img src="./images/5 social comments/Ellipse 11.png" alt="" />
-        <img src="./images/5 social comments/Vector-1.png" alt="" />
+        <img class="smiley" src="./images/Vector.png" alt="" />
+        <img
+          class="face-icon"
+          src="./images/5 social comments/Ellipse 11.png"
+          alt=""
+        />
+        <img
+          class="yellow-dots"
+          src="./images/5 social comments/Vector-1.png"
+          alt=""
+        />
         <p>This is the best place ever</p>
 
         <h6>google</h6>
         <h2>Janice <span>Damon</span></h2>
+      </div>
+      <div class="comment-wrapper">
+        <img class="smiley" src="./images/Vector.png" alt="" />
+        <img
+          class="face-icon"
+          src="./images/5 social comments/Ellipse 11-1.png"
+          alt=""
+        />
+        <img
+          class="yellow-dots"
+          src="./images/5 social comments/Vector-1.png"
+          alt=""
+        />
+        <p>Young Ave is the shit</p>
+
+        <h6>facebook</h6>
+        <h2>David <span>Bronson</span></h2>
+      </div>
+      <div class="comment-wrapper">
+        <img class="smiley" src="./images/Vector.png" alt="" />
+        <img
+          class="face-icon"
+          src="./images/5 social comments/Ellipse 11-2.png"
+          alt=""
+        />
+        <img
+          class="yellow-dots"
+          src="./images/5 social comments/Vector-1.png"
+          alt=""
+        />
+        <p>The cheese sticks are to die for</p>
+
+        <h6>yelp</h6>
+        <h2>alex <span>donovan</span></h2>
+      </div>
+      <div class="comment-wrapper">
+        <img class="smiley" src="./images/Vector.png" alt="" />
+        <img
+          class="face-icon"
+          src="./images/5 social comments/Ellipse 11-3.png"
+          alt=""
+        />
+        <img
+          class="yellow-dots"
+          src="./images/5 social comments/Vector-1.png"
+          alt=""
+        />
+        <p>Love this!</p>
+
+        <h6>Trip advisor</h6>
+        <h2>rachel <span>parson</span></h2>
+      </div>
+    </div>
+
+    <!-- //////// night happening /////// -->
+
+    <div class="container-fluid night-happening">
+      <div class="card-wrap-night">
+        <img
+          class="img-fluid"
+          src="./images/8 nigh-happening/Rectangle.png"
+          alt=""
+        />
+        <div class="yellow-circle-night">
+          <h3>Trivia Night</h3>
+        </div>
+      </div>
+      <div class="black-card-nigh-wrap">
+        <h1>
+          Industry <span> Night</span>
+          <br />
+          <hr />
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+          varius enim in eros elementum radius tristique.
+        </p>
+      </div>
+
+      <div class="card-wrap-night">
+        <img class="img-fluid" src="./images/4 onmenu/Rectangle-7.png" alt="" />
+        <div class="yellow-circle-night">
+          <h3>Pint night</h3>
+        </div>
+      </div>
+      <div class="card-wrap-night">
+        <img
+          class="img-fluid"
+          src="./images/8 nigh-happening/Rectangle-1.png"
+          alt=""
+        />
+        <div class="yellow-circle-night">
+          <h3>all the sports</h3>
+        </div>
+      </div>
+    </div>
+
+    <!-- ////// order beer and about //////  -->
+    <div class="container-fluid two-cards-wrap">
+      <div class="beer-club-wrapper">
+        <h1>Beer club</h1>
+        <form action="submit">
+          <input
+            type="date"
+            name="date"
+            id="inp-date"
+            placeholder="Date (dd/mm)"
+          />
+          <input
+            type="time"
+            name="time"
+            id="inp-time"
+            placeholder="Time(hh/mm)"
+          />
+          <input
+            type="text"
+            name="guest"
+            id="inp-guest"
+            placeholder="Guest (Ex.8)"
+          />
+          <input type="text" name="name" id="inp-name" placeholder="Name" />
+          <input type="email" name="email" id="inp-email" placeholder="Email" />
+          <input type="phone" name="phone" id="inp-phone" placeholder="Phone" />
+
+          <button class="btn btn-submit-beer">beer me</button>
+        </form>
+      </div>
+
+      <!-- ///// about us card //// -->
+      <div class="about-us">
+        <h1>about <span>us</span></h1>
+        <br />
+        <hr />
+        <h4>
+          Young Ave Dell is a Midtown Memphis <br />
+          staple.More content should go here
+        </h4>
+        <p>
+          For a chance to win a FREE t-shirt monthly, <br />
+          sign up for our newsletter below.
+        </p>
+        <form action="newsletter">
+          <input type="email" name="email" id="newsletter" />
+          <button class="newsletter-button">
+            <img
+              src="./images/6 social media icons and rest of svg/Vector-5.png"
+              alt=""
+            />
+          </button>
+        </form>
       </div>
     </div>
 
