--- a/src/index.html
+++ b/src/index.html
@@ -21,19 +21,20 @@
   <body>
     <!-- navbar  -->
 
-    <nav class="navbar navbar-dark bg-dark">
+    <nav id="navbar-my" class="navbar navbar-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">
-          <img
-            id="logo"
-            src="./images/1 logo/834563.png"
-            alt=""
-            width="39px"
-            height="38px"
-          />
-          <h2>young ave deli</h2>
-        </a>
-
+        <div class="logo">
+          <a class="navbar-brand" href="#">
+            <img
+              id="logo"
+              src="./images/1 logo/834563.png"
+              alt=""
+              width="39px"
+              height="38px"
+            />
+            <h2>young ave deli</h2>
+          </a>
+        </div>
         <button
           class="navbar-toggler"
           type="button"
@@ -374,17 +375,13 @@
       </div>
 
       <div class="card-wrap-night">
-        <img class="img-fluid" src="./images/4 onmenu/Rectangle-7.png" alt="" />
+        <img src="./images/4 onmenu/Rectangle-7.png" alt="" />
         <div class="yellow-circle-night">
           <h3>Pint night</h3>
         </div>
       </div>
       <div class="card-wrap-night">
-        <img
-          class="img-fluid"
-          src="./images/8 nigh-happening/Rectangle-1.png"
-          alt=""
-        />
+        <img src="./images/8 nigh-happening/Rectangle-1.png" alt="" />
         <div class="yellow-circle-night">
           <h3>all the sports</h3>
         </div>
@@ -425,25 +422,113 @@
       <!-- ///// about us card //// -->
       <div class="about-us">
         <h1>about <span>us</span></h1>
-        <br />
         <hr />
         <h4>
           Young Ave Dell is a Midtown Memphis <br />
-          staple.More content should go here
+          staple.More content should go here.....
         </h4>
         <p>
           For a chance to win a FREE t-shirt monthly, <br />
           sign up for our newsletter below.
         </p>
         <form action="newsletter">
-          <input type="email" name="email" id="newsletter" />
+          <input
+            type="email"
+            name="email"
+            id="newsletter"
+            placeholder="Newsletter (Email)"
+          />
           <button class="newsletter-button">
             <img
-              src="./images/6 social media icons and rest of svg/Vector-5.png"
-              alt=""
+              src="./images/6 social media icons and rest of svg/telegram.png"
+              alt="send"
             />
           </button>
         </form>
+      </div>
+    </div>
+    <div class="google-map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d519.4473015273051!2d12.962217776288922!3d42.56723316203142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2srs!4v1631578319268!5m2!1sen!2srs"
+        width="600"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+      ></iframe>
+      <div class="social">
+        <div class="social-img">
+          <img
+            src="./images/6 social media icons and rest of svg/facebook.png"
+            alt="facebook"
+          />
+        </div>
+        <div class="social-img">
+          <img
+            src="./images/6 social media icons and rest of svg/twitter.png"
+            alt="twitter"
+          />
+        </div>
+        <div class="social-img">
+          <img
+            src="./images/6 social media icons and rest of svg/instagram.png"
+            alt="instagram"
+          />
+        </div>
+      </div>
+    </div>
+    <!-- //// give us a shout ///// -->
+    <div class="give-us-shout">
+      <h3>give us a shout</h3>
+      <form action="send-message">
+        <input type="text" name="name" id="name-shout" placeholder="Name" />
+        <input type="email" name="email" id="emaol-shout" placeholder="Email" />
+        <input
+          type="text"
+          name="message"
+          id="message-shout"
+          placeholder="Message"
+        />
+        <button class="send-message-btn">Send message</button>
+      </form>
+    </div>
+    <!-- /////// fooooter ////// -->
+    <div class="footer">
+      <div class="info-wrap">
+        <ul>
+          <li>
+            <img
+              src="./images/6 social media icons and rest of svg/Vector.png"
+              alt="here"
+            />
+            2119 young ave, memphis tn
+          </li>
+          <li>
+            <img
+              src="./images/6 social media icons and rest of svg/message-mail.png"
+              alt="message"
+            />info@youngavenuedeli.com
+          </li>
+          <li>
+            <img
+              src="./images/6 social media icons and rest of svg/Vector-1.png"
+              alt=""
+            />(901)278-0034
+          </li>
+        </ul>
+      </div>
+      <div class="rest-footer">
+        <ul>
+          <li><a href="#">link #1</a></li>
+          <li><span>*</span></li>
+          <li><a href="#">Link #2</a></li>
+          <li><span>*</span></li>
+          <li><a href="#">Link #3</a></li>
+        </ul>
+        <p>
+          made with <span class="hearth">&#10084;</span> by
+          <span>cache cow</span>
+        </p>
       </div>
     </div>
 
